# cpematcher-ng

./: .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  Justfile  devenv.nix  devenv.yaml  pyproject.toml
.github/workflows/: publish.yml  test.yml
cpematcher/: core.py  version.py
tests/: test_core.py
